CDR-1901 - Remove EHRBase Template Id header
- Remove querying for the template id if it's available in the composition (creating, retrieving and updating)